# FinalProject_biu_ds20

./: .gitignore  app.py  app2.py  app3.py  main.py  pyproject.toml
config/: config.py
plots/: altair_forecast.html
src/: data_load.py  ml_pipeline.py  test2.py  test_code.py
src/common/: base_component.py
streamlit_presentation/: app.py
time_series/: meta_prophet.py  sarimax.py
time_series/config/: config.py  logging_config.py
time_series/שעור ראשון/: GPRE_price_forecast.json  prophet_20251012_prod_stock.py  prophet_e_commerce_20250323.py  prophet_תרגול__(1).py  והשפעת_החגים_תחזיות_עליה_עם_תחזית_עתדית_.py
time_series/שעור שני בר אילן/: ARIMA_Prod_משחק.ipynb  Arima_ADF.ipynb  Arima_Loop_חיזוי_יום_קדימה (1).ipynb  Loop_Get_Best_ARIMA_20250403_Stock (1).ipynb  Loop_Get_Best_ARIMA_20250403_Stock.ipynb  SARIMAX_20240905.ipynb  SARIMX_AUTO_Hose_Model_משימה_לסטודנטים_פתרון_.ipynb
