[tool.poetry]
name = "finalproject-biu-ds20"
version = "0.1.0"
description = ""
authors = ["Ofer <ofer@il-fts.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
prophet = "^1.2.1"
altair = "^6.0.0"
matplotlib = "^3.10.7"
scikit-learn = "^1.7.2"
pyprojroot = "^0.3.0"
ipython = "^9.7.0"
seaborn = "^0.13.2"
pydantic = "^2.12.4"
ipywidgets = "^8.1.8"
yfinance = "^0.2.66"
pmdarima = "^2.1.1"
statsmodels = "^0.14.5"
tensorflow = "^2.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
